--- a/lab2.html
+++ b/lab2.html
@@ -3,6 +3,7 @@
         <title>My title</title>
     </head>
     <body>
+        <h1>jhsdfusdfuih</h1>
         <p>nklsdfjbnklsdfnklik</p>
     </body>
 </html>
